--- a/deployment.yaml
+++ b/deployment.yaml
@@ -1,26 +1,12 @@
-apiVersion: apps/v1
-kind: Deployment
+apiVersion: v1
+kind: Service
 metadata:
-  name: flower-app-deployment
-spec: # It define the behavior of the Deployment
-  replicas: 2
+  name: flower-app-svc
+spec:
   selector:
-    matchLabels:
-      app: web
-  template: # It defines the Pod Definiation
-    metadata:
-      labels:
-        app: web
-    spec:
-      containers:
-      - name: flower-contianer
-        image: rohithmn18/transaction-history:latest
-        resources:
-          limits:
-            memory: "500Mi"
-            cpu: "300m"
-          requests:
-            memory: "128Mi"
-            cpu: "200m"  
-        ports:
-        - containerPort: 3015
+    app: web
+  ports:
+  - port: 3017 # Service  Port Number on which port number you want to access the application
+    targetPort: 3015 # On Which Port Number your application is running
+    protocol: TCP
+  type: LoadBalancer 
