--- a/deployment.yaml
+++ b/deployment.yaml
@@ -9,4 +9,24 @@ spec:
   - port: 3017 # Service  Port Number on which port number you want to access the application
     targetPort: 3015 # On Which Port Number your application is running
     protocol: TCP
-  type: LoadBalancer 
+  type: LoadBalancer  
+  
+---
+apiVersion: autoscaling/v2
+kind: HorizontalPodAutoscaler
+metadata:
+  name: flower-app-autoscaling
+spec:
+  scaleTargetRef:
+    apiVersion: apps/v1
+    kind: Deployment
+    name: flower-app-deployment
+  minReplicas: 2
+  maxReplicas: 5
+  metrics:
+  - type: Resource
+    resource:
+      name: cpu
+      target:
+        type: Utilization
+        averageUtilization: 2
